# zhou

./: .gitignore  GEMINI.md  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  cleanup.py  error.txt  main.py  prompt.md  prompt_llm.md  pyproject.toml  run.py  task.txt  tree.py
app/analysis/: calibrator.py  cost_bar_analyzer.py  plan_loader.py  recorder_process.py  ruler_process.py  vision_utils.py
app/control/: base.py  commander_process.py  maatouch_adapter.py
app/control/engine/: base.py  maatouch_adapter.py  mumu_macro_adapter.py
app/core/: config.py
app/core/ipc/: double_shared_buffer.py  triple_shared_buffer.py
app/perception/: capture_process.py
app/perception/engines/: base.py  mock.py  mumu.py
app/utils/: windows_utils.py
calibration/: profile_1756636919_30f_1920x1080.json  profile_1756910598_30f_1920x1080.json  profile_1757000671_30f_1920x1080.json  profile_1757024839_30f_1920x1080.json
configs/: mumu.yaml  settings.yaml
min_test/: capture_service_with_shm.py  consumer_with_shm.py  pure_python_producer.py  real_dll_producer.py  relay_and_consumer.py  relay_and_consumer_final_test.py  test_step1_mmap.py
plans/: 1.yaml  deployment-showcase.yaml  example.yaml  test.yaml
tests/: conftest.py  test_capture_ipc.py  test_capture_workflow.py  test_config.py  test_mumu_engine.py  test_mumu_engine_perf.py
ui/: backend_connector.py  main_ui.py
