[project]
name = "zhou-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pydirectinput>=1.0.4",
    "pynput>=1.8.1",
    "pyside6>=6.9.2",
    "pywin32>=311",
    "pyyaml>=6.0.2",
]
